add base chapter templates

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,26 @@
 			<div class="chapter">
 				@@include(markdown("chapters/chapter1.md"))
 			</div>
+			<hr>
+			<div class="chapter">
+				@@include(markdown("chapters/chapter2.md"))
+			</div>
+			<hr>
+			<div class="chapter">
+				@@include(markdown("chapters/chapter3.md"))
+			</div>
+			<hr>
+			<div class="chapter">
+				@@include(markdown("chapters/chapter4.md"))
+			</div>
+			<hr>
+			<div class="chapter">
+				@@include(markdown("chapters/chapter5.md"))
+			</div>
+			<hr>
+			<div class="chapter">
+				@@include(markdown("chapters/chapter6.md"))
+			</div>
 		</div>
 	</div>
 </div>
