--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <p>In this workshop, we&#39;ll be using the NativeScript Playground to quickly prototype an app. It&#39;s a powerful tool, and we believe you&#39;ll like this approach because you don&#39;t need to install anything on your computer to get started.</p>
 <h3 id="what-you-re-building">What you&#39;re building</h3>
 <p>In this workshop you&#39;ll learn how to build iOS and Android mobile apps using NativeScript. Throughout the workshop, you&#39;ll be building a <a href="https://spacex.com">SpaceX</a> Launch Information app that uses the SpaceX launch <a href="https://api.spacexdata.com/v2/launches">API</a>. The app will list past and future SpaceX launches, and allow you to learn more about each launch. </p>
+<p><img src="images/chapter0/SpaceX_home.jpg" class="img-small" /></p>
 <p>Key concepts and take aways:</p>
 <ul>
 <li>NativeScript app architecture</li>
@@ -83,8 +84,8 @@
 			</div>
 			<hr>
 			<div class="chapter">
-				<h2 id="another-chapter">Another chapter</h2>
-<p>Donec nisi magna, vehicula et purus eget, blandit suscipit tellus. Quisque lobortis augue at fringilla ullamcorper. Integer mattis diam eget augue suscipit, a malesuada mauris bibendum. Phasellus venenatis elit in semper hendrerit. Nunc tincidunt lectus in mauris facilisis, et laoreet metus aliquet. Mauris at hendrerit turpis, at semper mi. Suspendisse vel arcu nulla. Nullam scelerisque consequat molestie. Curabitur sit amet porta odio. Morbi lacinia vel tortor eu fringilla.</p>
+				<h2 id="getting-started-with-the-nativescript-playground">Getting Started with the NativeScript Playground</h2>
+<p>In this chapter, you&#39;ll learn how to use the NativeScript Playground to </p>
 <h3 id="another-section">Another section</h3>
 <p>Mauris tempor facilisis accumsan. Mauris vitae iaculis risus. Mauris volutpat suscipit neque non bibendum. Phasellus non fringilla enim. Aliquam tempor quam vel ligula porta convallis. In blandit dictum tempus. Nunc at pulvinar justo. Aliquam eu mi eros. Nunc sit amet tellus non lorem malesuada tempus. Vestibulum nunc magna, varius ut aliquam non, fermentum sodales metus. Aliquam sit amet pulvinar lacus. Sed fringilla placerat tempor. Pellentesque id elementum nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec laoreet, ex eget vulputate tincidunt, enim nisi ullamcorper urna, at scelerisque tellus mi sit amet nisi. Duis ac risus ac odio efficitur dignissim vitae dapibus purus.</p>
 <h3 id="yet-another-section">Yet another section</h3>
