--- a/index.html
+++ b/index.html
@@ -93,13 +93,39 @@
 			</div>
 			<hr>
 			<div class="chapter">
-				<h2 id="another-chapter">Another chapter</h2>
-<p>Donec nisi magna, vehicula et purus eget, blandit suscipit tellus. Quisque lobortis augue at fringilla ullamcorper. Integer mattis diam eget augue suscipit, a malesuada mauris bibendum. Phasellus venenatis elit in semper hendrerit. Nunc tincidunt lectus in mauris facilisis, et laoreet metus aliquet. Mauris at hendrerit turpis, at semper mi. Suspendisse vel arcu nulla. Nullam scelerisque consequat molestie. Curabitur sit amet porta odio. Morbi lacinia vel tortor eu fringilla.</p>
-<h3 id="another-section">Another section</h3>
-<p>Mauris tempor facilisis accumsan. Mauris vitae iaculis risus. Mauris volutpat suscipit neque non bibendum. Phasellus non fringilla enim. Aliquam tempor quam vel ligula porta convallis. In blandit dictum tempus. Nunc at pulvinar justo. Aliquam eu mi eros. Nunc sit amet tellus non lorem malesuada tempus. Vestibulum nunc magna, varius ut aliquam non, fermentum sodales metus. Aliquam sit amet pulvinar lacus. Sed fringilla placerat tempor. Pellentesque id elementum nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec laoreet, ex eget vulputate tincidunt, enim nisi ullamcorper urna, at scelerisque tellus mi sit amet nisi. Duis ac risus ac odio efficitur dignissim vitae dapibus purus.</p>
-<h3 id="yet-another-section">Yet another section</h3>
-<p>Cras massa nulla, feugiat eu pretium in, tempor nec nulla. Nullam vel lobortis felis. Cras varius iaculis ornare. Ut at nisl sit amet leo pulvinar iaculis non ut purus. Morbi luctus magna sed condimentum cursus. Ut accumsan enim ligula, vitae dapibus odio blandit quis. Sed auctor ex non scelerisque vulputate. Nunc feugiat lobortis nisl consequat consectetur. Vivamus consequat sem id consectetur varius. Nam nec erat id est interdum venenatis eu eu felis. Suspendisse potenti. Donec non sapien in est maximus cursus eget eget nunc. Maecenas congue sapien ut tempor facilisis.</p>
+				<h2 id="getting-started">Getting Started</h2>
+<p>Now that you understand the basics of NativeScript and how the Playground you&#39;re ready to start creating your first (or maybe not your first) NativeScript app. Over the course of this chapter and the next few chapters you will be creating an app the reads and displays <a href="http://www.spacex.com">SpaceX</a> flight data.</p>
+<p>In this chapter will focus on designing the home page and learn to use the following NativeScript elements:</p>
+<ul>
+<li><code>&lt;Button&gt;</code></li>
+<li><code>&lt;StackLayout&gt;</code></li>
+<li><code>&lt;ScrollView&gt;</code></li>
+</ul>
+<h3 id="layouts">Layouts</h3>
+<p>Before we go too much further, I need to introduce you to something called a layout. Layouts are UI elements (similar to the <code>&lt;Label /&gt;</code> element) that allow you to organize the UI of each page.</p>
+<p>If you look at the <code>home-component</code> that you scaffolded in the previous chapter, you will see there is already code added to the <code>home-component.html</code> for you.</p>
+<pre><code class="lang-xml">&lt;ActionBar title=&quot;Home&quot; class=&quot;action-bar&quot;&gt;
+&lt;/ActionBar&gt;
 
+&lt;ScrollView class=&quot;page&quot;&gt;
+    &lt;StackLayout class=&quot;home-panel&quot;&gt;
+        &lt;!--Add your page content here--&gt;
+    &lt;/StackLayout&gt;
+&lt;/ScrollView&gt;
+</code></pre>
+<p>The <code>ScrollView</code> and <code>StackLayout</code> elements are two basic layout elements (we&#39;ll talk about the <code>ActionBar</code> in a later chapter). To display multiple elements on a page, you need to use a layout like the <code>ScrollView</code> or <code>StackLayout</code> and in most cases you will want to use both. The <code>ScrollView</code> functions exactly as you would expect; it makes the content inside of it scrollable. The <code>StackLayout</code> element organizes child elements vertically or horizonatally.</p>
+<blockquote>
+<p>The <code>StackLayout</code> organizes child elements stacked on top of each other vertically by default.</p>
+</blockquote>
+<p>Now that we&#39;ve talked about basic layouts, let&#39;s start designing the home view.</p>
+<h3 id="designing-the-home-view">Designing the home view</h3>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Using the StackLayout to organize UI elements in a &quot;stack&quot;
+</h4>
+
+<p>First thing is first, go ahead and remove the <code>ActionBar</code> element from <code>home-component.html</code> because you will not need this on the home view. After deleting the <code>ActionBar</code> your app should have a blank home view inside the NativeScript preview app.</p>
+<p><img src="images/chapter2/chapter2-1.jpeg" class="img-small" /></p>
+<div class="exercise-end"></div>
 			</div>
 			<hr>
 			<div class="chapter">
