--- a/index.html
+++ b/index.html
@@ -85,11 +85,60 @@
 			<hr>
 			<div class="chapter">
 				<h2 id="getting-started-with-the-nativescript-playground">Getting Started with the NativeScript Playground</h2>
-<p>In this chapter, you&#39;ll learn how to use the NativeScript Playground to </p>
-<h3 id="another-section">Another section</h3>
-<p>Mauris tempor facilisis accumsan. Mauris vitae iaculis risus. Mauris volutpat suscipit neque non bibendum. Phasellus non fringilla enim. Aliquam tempor quam vel ligula porta convallis. In blandit dictum tempus. Nunc at pulvinar justo. Aliquam eu mi eros. Nunc sit amet tellus non lorem malesuada tempus. Vestibulum nunc magna, varius ut aliquam non, fermentum sodales metus. Aliquam sit amet pulvinar lacus. Sed fringilla placerat tempor. Pellentesque id elementum nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec laoreet, ex eget vulputate tincidunt, enim nisi ullamcorper urna, at scelerisque tellus mi sit amet nisi. Duis ac risus ac odio efficitur dignissim vitae dapibus purus.</p>
-<h3 id="yet-another-section">Yet another section</h3>
-<p>Cras massa nulla, feugiat eu pretium in, tempor nec nulla. Nullam vel lobortis felis. Cras varius iaculis ornare. Ut at nisl sit amet leo pulvinar iaculis non ut purus. Morbi luctus magna sed condimentum cursus. Ut accumsan enim ligula, vitae dapibus odio blandit quis. Sed auctor ex non scelerisque vulputate. Nunc feugiat lobortis nisl consequat consectetur. Vivamus consequat sem id consectetur varius. Nam nec erat id est interdum venenatis eu eu felis. Suspendisse potenti. Donec non sapien in est maximus cursus eget eget nunc. Maecenas congue sapien ut tempor facilisis.</p>
+<p>In this chapter, you&#39;ll learn how to use the NativeScript Playground to get started quickly, build your first app, and run the app on your phone.</p>
+<h3 id="about-the-nativescript-playground">About the NativeScript Playground</h3>
+<p>The <a href="https://play.nativescript.org">NativeScript Playground</a> is a browser-based environment for developing simple NativeScript apps. It’s a great place to get started learning NativeScript, as you can develop apps without needing to install the various SDKs and tools needed for native iOS and Android development. All you need is your browser, and an Android or iOS mobile device connected to the internet to get started. </p>
+<h3 id="getting-started-and-your-first-app">Getting Started and Your First App</h3>
+<p>Now that you know about the NativeScript Playground, let&#39;s get started.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Explore the Playground and Run an App
+</h4>
+
+<h4 id="prerequisites">Prerequisites</h4>
+<p>Before we get started, you&#39;ll need to install 2 apps on your mobile device: </p>
+<ul>
+<li>NativeScript Playground: <a href="https://itunes.apple.com/us/app/nativescript-playground/id1263543946?mt=8">iOS</a>, <a href="https://play.google.com/store/apps/details?id=org.nativescript.play&amp;hl=en">Android</a></li>
+<li>NativeScript Preview: <a href="https://itunes.apple.com/us/app/nativescript-preview/id1264484702?mt=8">iOS</a>, <a href="https://play.google.com/store/apps/details?id=org.nativescript.preview&amp;hl=en">Android</a></li>
+</ul>
+<p>In your your respective App Store (Google Play or Apple App Store), locate both apps and install them on your mobile device. If you&#39;re haivng troubel finding the app, use the links above.</p>
+<h4 id="explore-the-nativescript-playground">Explore the NativeScript Playground</h4>
+<p>Next, navigate to the <a href="https://play.nativescript.org">NativeScript Playground</a> in your browser. </p>
+<p><img src="images/chapter1/playground-1.png" class="img-large" /></p>
+<p>Click &quot;Play now&quot; to begin.</p>
+<p><img src="images/chapter1/play-now.png" class="img-small" /></p>
+<p>After clicking &quot;Play now&quot; a QR code will appear, and you&#39;ll be notified that your Playground is ready:</p>
+<p><img src="images/chapter1/playground-ready.png" class="img-medium" /></p>
+<p>Open the NativeScript Playground app on your mobile device, and select the &quot;Scan QR code&quot; action.</p>
+<p><img src="images/chapter1/scan-qr.jpg" class="img-small" /></p>
+<p>Using the QR code scanner in the NativeScript Playground app, scan the QR code displayed on the NativeScript Playground website. </p>
+<blockquote>
+<p><em>NOTE</em>: Do not scan the QR code in the workshop.</p>
+</blockquote>
+<p>After scanning the QR code, the NativeScript Playground app will open the NativeScript Preview app and dynamically load the code from the Playground Website and launch a native mobile app on your mobile device!</p>
+<p>When all of this happens, you should see this on your mobile device:</p>
+<p><img src="images/chapter1/play-2.jpg" class="img-small" /></p>
+<p>You should also see the following on the Playground website:</p>
+<p><img src="images/chapter1/play-3.png" class="img-large" /></p>
+<p>Congratulations! You just used the Playground to write your first mobile app with Angular. Then, you ran the app on your phone. That was fast - and you didn&#39;t need to install anythign on your computer!</p>
+<div class="exercise-end"></div>
+
+<p>Before we move on, let&#39;s take a minute to understand what happened and explore the NativeScript Playground UI.</p>
+<h3 id="how-the-nativescript-playground-works">How the NativeScript Playground Works</h3>
+<p>The NativeScript Playground is a web-based IDE. You write your Angular code in the browser, then save it. When you scan the QR code, the NativeScript Playground app coordinates with the NativeScript Preview app and reaches out to the Playground website. The code is pulled down, loaded into the NativeScript runtime in the Preview app, and renders native iOS/Android UI on your mobile device.</p>
+<h3 id="exploring-the-playground-ui">Exploring the Playground UI</h3>
+<p>Now that you&#39;ve learned how the Playground works, let&#39;s explore the UI.</p>
+<p>As you&#39;ll notice, the Playground UI is similar to a basic IDE, like Visual Studio Code, Visual Studio, Eclipse, or Web Storm.</p>
+<p><img src="images/chapter1/play-3.png" class="img-large" /></p>
+<p>On the left is a file explorer, where you can add or update files and folders to your mobile app:</p>
+<p><img src="images/chapter1/play-4.png" class="img-large" /></p>
+<p>The large central area is a file editor with Intellisense:</p>
+<p><img src="images/chapter1/play-5.png" class="img-large" /></p>
+<p>The bottom central area shows you which mobile devices are connected to the Playground and device/error logs for debugging purposes.</p>
+<p><img src="images/chapter1/play-6.png" class="img-large" /></p>
+<blockquote>
+<p><em>Connected Devices</em> Hold on...the Playground shows you connected devices. Yes, that&#39;s right. When your mobile device connects to the Playground, it registers itself with the website. You can see a variety of information about a connected device. </p>
+</blockquote>
+<p>Pretty cool, right? Well, there&#39;s somethign even cooler about the Playground: LiveSync. LiveSync is a technology that syncs changes made in the Playground down to your mobile device in real time. This means that you can quickly make changes to your app in the Playground and the changes will be instantly pushed to connected devices. If you&#39;ve ever done mobile development before, you&#39;ll understand how useful this is - getting feedback from your code running on real mobile devices usually takes time, but with LiveSync, it&#39;s instantaneous.</p>
 
 			</div>
 			<hr>
