update QR scanning note

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <p><img src="images/chapter1/scan-qr.jpg" class="img-small" /></p>
 <p>Using the QR code scanner in the NativeScript Playground app, scan the QR code displayed on the NativeScript Playground website. </p>
 <blockquote>
-<p><em>NOTE</em>: Do not scan the QR code in the workshop.</p>
+<p><em>NOTE</em>: Do not scan the QR code on <em>this</em> page. Scan the QR code in the Playground.</p>
 </blockquote>
 <p>After scanning the QR code, the NativeScript Playground app will open the NativeScript Preview app and dynamically load the code from the Playground Website and launch a native mobile app on your mobile device!</p>
 <p>When all of this happens, you should see this on your mobile device:</p>
