--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
 <p>After scanning the QR code, the NativeScript Playground app will open the NativeScript Preview app and dynamically load the code from the Playground Website and launch a native mobile app on your mobile device!</p>
 <p>When all of this happens, you should see this on your mobile device:</p>
 <p><img src="images/chapter1/play-2.jpg" class="img-small" /></p>
-<p>You should also see the following on the Playground website:</p>
+<p>...and you should also see the following on the Playground website:</p>
 <p><img src="images/chapter1/play-3.png" class="img-large" /></p>
-<p>Congratulations! You just used the Playground to write your first mobile app with Angular. Then, you ran the app on your phone. That was fast - and you didn&#39;t need to install anythign on your computer!</p>
+<p>Congratulations! You just used the Playground to write your first mobile app with Angular. Then, you ran the app on your phone. That was fast - and you didn&#39;t need to install anything on your computer!</p>
+<p>OK, we know you didn&#39;t have to do much of anything to write this app, but we promose you&#39;ll learn more and build something more advanced during the workshop.</p>
 <div class="exercise-end"></div>
 
 <p>Before we move on, let&#39;s take a minute to understand what happened and explore the NativeScript Playground UI.</p>
