add video and snacks link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 <h3 id="about-nativescript">About NativeScript</h3>
 <p><a href="https://nativescript.org">NativeScript</a> is a framework for building native iOS and Android apps using JavaScript and CSS. NativeScript renders UIs with the native platform’s rendering engine, no WebViews, resulting in native-like performance and UX.</p>
 <p>NativeScript provides a best-of-both-worlds development experience. Our cross-platform JavaScript modules give you the convenience of writing iOS and Android apps from a single JavaScript code base, while our runtimes give you the power of accessing native APIs, SDKs, and frameworks when you need them—all without needing to open Xcode or Android Studio. NativeScript was created and is supported by Telerik.</p>
+<p>To learn more about how NativeScript works, check out this quick 3-minute video.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/I3_ZnWTj-NA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
 <h3 id="about-the-nativescript-playground">About the NativeScript Playground</h3>
 <p>The <a href="https://play.nativescript.org">NativeScript Playground</a> is a browser-based environment for developing simple NativeScript apps. It’s a great place to get started learning NativeScript, as you can develop apps without needing to install the various SDKs and tools needed for native iOS and Android development. All you need is your browser, and an Android or iOS mobile device connected to the internet to get started. </p>
 <p>In this workshop, we&#39;ll be using the NativeScript Playground to quickly prototype an app. It&#39;s a powerful tool, and we believe you&#39;ll like this approach because you don&#39;t need to install anything on your computer to get started.</p>
@@ -70,6 +73,7 @@
 <ul>
 <li>Official NativeScript website: <a href="https://nativescript.org">https://nativescript.org</a></li>
 <li>NativeScript Playground: <a href="https://play.nativescript.org">https://play.nativescript.org</a></li>
+<li>NativeScript Snacks (short videos and tutorials to help you get started fast): <a href="http://www.nativescriptsnacks.com">http://www.nativescriptsnacks.com</a></li>
 <li>NativeScript Sidekick (get started fast on your computer): <a href="https://www.nativescript.org/nativescript-sidekick">https://www.nativescript.org/nativescript-sidekick</a></li>
 <li>NativeScript Discourse Forum: <a href="https://discourse.nativescript.org/">https://discourse.nativescript.org/</a></li>
 <li>Official Resources List: <a href="https://www.nativescript.org/resources">https://www.nativescript.org/resources</a></li>
