add exercise verbiage

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <b>Exercise</b>: Explore the Playground and Run an App
 </h4>
 
+<p>In this exercise, you&#39;ll explore the NativeScript Playground and learn how to run an app built in the Playground on your mobile device.</p>
 <h4 id="prerequisites">Prerequisites</h4>
 <p>Before we get started, you&#39;ll need to install 2 apps on your mobile device: </p>
 <ul>
@@ -143,13 +144,17 @@
 <blockquote>
 <p><em>Connected Devices</em> Hold on...the Playground shows you connected devices. Yes, that&#39;s right. When your mobile device connects to the Playground, it registers itself with the website. You can see a variety of information about a connected device. </p>
 </blockquote>
-<p>Pretty cool, right? Well, there&#39;s somethign even cooler about the Playground: LiveSync. LiveSync is a technology that syncs changes made in the Playground down to your mobile device in real time. This means that you can quickly make changes to your app in the Playground and the changes will be instantly pushed to connected devices. If you&#39;ve ever done mobile development before, you&#39;ll understand how useful this is - getting feedback from your code running on real mobile devices usually takes time, but with LiveSync, it&#39;s instantaneous.</p>
+<p>Pretty cool, right? Well, there&#39;s somethign even cooler about the Playground: <em>LiveSync</em>. </p>
+<blockquote>
+<p>LiveSync is a technology that syncs changes made in the Playground down to your mobile device in real time. This means that you can quickly make changes to your app in the Playground and the changes will be instantly pushed to connected devices. If you&#39;ve ever done mobile development before, you&#39;ll understand how useful this is - getting feedback from your code running on real mobile devices usually takes time, but with LiveSync, it&#39;s instantaneous.</p>
+</blockquote>
 <h3 id="livesync-in-action">LiveSync in Action</h3>
 <p>Now that you&#39;ve learned about LiveSync, let&#39;s see it in action. </p>
 <h4 class="exercise-start">
     <b>Exercise</b>: Using LiveSync
 </h4>
 
+<p>In this exercise, you&#39;ll learn how to use LiveSync by interacting wth the Playground website and seeing the app on your mobile device update automatically.</p>
 <h4 id="getting-started">Getting Started</h4>
 <p>Before we get started with this exercise, be sure to have your Playground app loaded in the NativeScript Preview app.</p>
 <p>If your app isn&#39;t running, press the &quot;QR code&quot; button in the Playground website, and re-scan the code on your mobile device:</p>
@@ -191,6 +196,7 @@
     <b>Exercise</b>: Clean up the default Playground template
 </h4>
 
+<p>In this exercise, you&#39;ll reorganize files and folders in the Playground website to get ready for the SpaceX app.</p>
 <h4 id="why-">Why?</h4>
 <p>You may be wondering why we&#39;re cleaning up the default Playground template. The default Playground template works well, but doesn&#39;t structure app pages into a &quot;views&quot; folder (which is a preference of ours).</p>
 <h4 id="remove-the-home-folder">Remove the home folder</h4>
