lead in to list page creation

--- a/index.html
+++ b/index.html
@@ -353,6 +353,8 @@ export class AppRoutingModule { }
 <p>In this chapter, you&#39;ll be creating a page to view recent and upcoming SpaceX launches, then you&#39;ll learn how to navigate to and from it. You&#39;ll also learn about these NativeScript elements:</p>
 <p>*<code>ActionBar</code></p>
 <h3 id="creating-the-list-page">Creating the List page</h3>
+<p>In the last chapter, you refined the Home page of your app, and finished by adding a button labeled View Launches. In this section, you&#39;ll put that button to use. </p>
+<p>But, before we can start using it, we&#39;ll need to create a page to navigate to. Let&#39;s start by adding the list page. </p>
 <h3 id="navigating-to-the-list-page">Navigating to the List page</h3>
 <h3 id="adding-an-action-bar">Adding an Action Bar</h3>
 
