start aciton bar section

--- a/index.html
+++ b/index.html
@@ -534,7 +534,28 @@ export class AppRoutingModule { }
 <p>This concludes the exercise.</p>
 <div class="exercise-end"></div>
 
+<p>Nice work! You&#39;ve just learned how to add navigation to your app. As a quick reminder, there are a few steps to take:</p>
+<ul>
+<li>Add a folder for the new page/component</li>
+<li>Add the new component</li>
+<li>Register the new component in the app module (<code>app.module.ts</code> file)</li>
+<li>Bind a button&#39;s tap event to a function with <code>(tap)=&quot;onTapFunction()&quot;</code></li>
+<li>Import <code>RouterExtensions</code> into the originating component&#39;s class code</li>
+<li>Using Angular&#39;s dependency injection, inject a <code>RouterExtensions</code> instance into the originating component&#39;s constructor</li>
+<li>Add the tap event handler function to the originating component&#39;s class code</li>
+<li>Register the new component as a route in <code>app-routing.module.ts</code> file </li>
+</ul>
+<blockquote>
+<p>Yeah, we know, it&#39;s a lot of code jsut to navigate, but that&#39;s the Angular way ;-)</p>
+</blockquote>
 <h3 id="adding-an-action-bar">Adding an Action Bar</h3>
+<p>In the final part of this chapter, you&#39;ll learn how to use NativeScript&#39;s Action Bar. </p>
+<blockquote>
+<p><strong>Action Bar</strong> The Action Bar is a UI element that controls the upper area of the screen, allowing you to create (or customize) a &quot;header&quot; of the page. </p>
+</blockquote>
+<p>Here&#39;s the area of the page we&#39;re going to modify:</p>
+<p><img src="images/chapter3/list-7.jpg" class="img-small" /></p>
+<p>This concludes the chapter.</p>
 
 			</div>
 			<hr>
