fix page reference in Home component

--- a/index.html
+++ b/index.html
@@ -451,8 +451,6 @@ First, you need to know that every UI element in NativeScript has a variety of e
 <pre><code class="lang-javascript">import { Component, OnInit } from &quot;@angular/core&quot;;
 import { RouterExtensions } from &quot;nativescript-angular/router&quot;;
 
-import { Page } from &quot;ui/page&quot;;
-
 @Component({
     selector: &quot;home&quot;,
     moduleId: module.id,
@@ -466,7 +464,6 @@ export class HomeComponent implements OnInit {
     }
 
     ngOnInit(): void {
-        this.page.actionBarHidden = true;
     }
 
     onViewLaunchesTap(): void {
@@ -556,7 +553,8 @@ export class AppRoutingModule { }
 <p>Here&#39;s the area of the page we&#39;re going to modify:</p>
 <p><img src="images/chapter3/list-7.jpg" class="img-small" /></p>
 <p>Action Bars are a versatile UI element in NativeScript, and you can use them to customize your app in various ways, including: navigation to the previous page, header icons, and page title/headings. We&#39;re not going to dive into the intimate details of Action Bars, so if you&#39;re interested in learning more, check out the <a href="https://docs.nativescript.org/angular/code-samples/ui/action-bar">official documentation</a>.</p>
-<p>Now that you can navigate to the List page, let&#39;s dive in and customize its Action Bar.</p>
+<p>Now that you know a little bit about the action 
+Now that you can navigate to the List page, let&#39;s dive in and customize its Action Bar.</p>
 <p>This concludes the chapter.</p>
 
 			</div>
